--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
+  background-image: url("./images/242893.jpg");
+  object-fit: cover;
+  object-position: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  text-align: center;
+}
+
+.main-options {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-around;
+  max-width: 50%;
+}
+
+button {
+  cursor: pointer;
+}
+
+li {
+  list-style: none;
+}
+
+.skills,
+.guilds,
+.items {
+  background-color: azure;
+  width: 15em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.guild-list,
+.skill-list {
+  padding: 0;
 }
